--- a/_posts/2019-7-25-Whale-1.md
+++ b/_posts/2019-7-25-Whale-1.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      "鲸 | Whale"
-subtitle:   "1-1"
+title:      "鲸 | 1-1"
+subtitle:   "Whale | 1-1"
 date:       2019-7-25 12:00:00
 author:     "弦望晦朔"
 header-img: "img/post/post-bg-universe.jpg"
