--- a/_posts/2019-7-25-Whale-2.md
+++ b/_posts/2019-7-25-Whale-2.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      "鲸 | Whale"
-subtitle:   "1-2"
+title:      "鲸 | 1-2"
+subtitle:   "Whale | 1-2"
 date:       2019-7-25 14:00:00
 author:     "弦望晦朔"
 header-img: "img/post/post-bg-whale-2.jpg"
