--- a/_posts/2019-7-25-Whale-4.md
+++ b/_posts/2019-7-25-Whale-4.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      "鲸 | Whale"
-subtitle:   "1-4"
+title:      "鲸 | 1-4"
+subtitle:   "Whale | 1-4"
 date:       2019-7-25 14:30:00
 author:     "弦望晦朔"
 header-img: "img/post/post-bg-whale-4.jpg"
