--- a/_posts/2019-12-31-end.md
+++ b/_posts/2019-12-31-end.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      "「今天你真好看」产品调研"
-subtitle:   
+title:      "2019年12月31日随记"
+subtitle:   今年最后的一次写作
 date:       2019-12-31 12:00:00
 author:     "弦望晦朔"
 header-img: "img/post/post-bg-end.jpg"
