整合产品经理文档

--- a/_posts/2019-7-26-List-1.md
+++ b/_posts/2019-7-26-List-1.md
@@ -62,7 +62,7 @@ tags:
 |                第三次浪潮                |    阿尔文·托夫勒     | 2018-11  |   2018-11   |   通俗读物   |
 |                中国近代史                |         李侃         |  2018-9  |   2018-10   |    历史学    |
 |               曾文正公日记               |        曾国藩        | 2018-10  |   2018-10   |    微观史    |
-|   ==思想史：从火到弗洛伊德（上、下）==   |   彼得·沃森（英）    | 2018-12  |   2019-1    |    思想史    |
+|   **思想史：从火到弗洛伊德（上、下）**   |   彼得·沃森（英）    | 2018-12  |   2019-1    |    思想史    |
 |                 人类简史                 | 尤瓦尔·赫拉利（以）  |  2019-1  |   2019-1    |    历史学    |
 |                阳明学述要                |         钱穆         |  2018-8  |   2018-8    |    历史学    |
 |                 瓦尔登湖                 |   戴维·梭罗（美）    | 2018-10  |   2018-10   |     小说     |
