--- a/_posts/2019-11-18-damubiao.md
+++ b/_posts/2019-11-18-damubiao.md
@@ -1,17 +1,223 @@
 ---
 layout:     post
-title:      "登录业务流程还原"
-subtitle:   "验证码登录、密码登录及找回密码——基于【达目标】"
+title:      "产品经理文档合集"
+subtitle:   "从产品视角到需求文档"
 date:       2019-11-18 14:00:00
 author:     "弦望晦朔"
 header-img: "img/post/post-bg-damubiao.jpg"
 tags:
     - 产品经理
+	- 产品视角
+	- 功能分析
     - 业务流程
+	- 产品调研
 
 
 ---
 
+
+
+# 从产品视角分析「拼多多」
+
+## 一、产品是什么
+
+---
+
+**产品是什么：**拼多多是一款基于"社交+电商"模式，以分享拼单为手段，最终达到降价购买商品的电商平台APP。
+
+**产品满足的需求点：**拼多多最核心的满足点还是人们的消费需求，但基于收入分层情况下的消费分层现状，淘宝与京东等大型电商平台基于产品定位和价格定位的问题，对于三四线城市的消费需求满足能力欠缺，拼多多满足了消费分层情况下低消费层级人群的消费需求。
+
+## 二、目标用户与典型场景
+
+---
+
+### （一）目标用户与典型场景
+
+案例1：不具备收入能力，但依靠家中所给予的生活费，拥有一定消费能力的学生党。
+
+典型使用场景：小昊最近一直在18款11英寸的Ipad Pro，但官方6331元的售价让他有些吃不消。他刷知乎的时候，发现了一些有关于拼多多物美价廉的讨论，于是下载了拼多多App，在App中，他发现这款Ipad Pro得到了百亿补贴，拼单后仅需5099元，算了算手头上积攒下来的钱，小昊果断参与了拼单。
+
+案例2：刚刚步入社会，收入相对较低，经济状况较为紧张的年轻人。
+
+典型使用场景：小琪最近刚刚大学毕业，繁忙的工作生活使她想要通过购物来缓解自己的工作压力，但淘宝和京东上的商品对于她来说都有些超出预算，一天她的朋友给她发了一条拼多多的分享消息，相对低廉的价格让她开始在拼多多上进行购物，并分享给了其他的朋友。
+
+案例3：退休在家，闲来无事但对家计精打细算的女性群体。
+
+典型使用场景：老侯退休在家，闲来无事的时候总喜欢刷一刷微信群，看看微信朋友圈，这一天群里有人分享了拼多多的水果特价的消息，她点开一看，水果的价格比她在超市看到的要便宜不少，于是她下载了拼多多App，拼团购买了一次水果，在收到成色不错的水果以后，她也开始给别人分享拼多多的拼团消息，并带动整个家庭使用拼多多。
+
+### （二）用户画像报告
+
+![图片1](/img/post/pinduoduo/1.png)
+
+图1 拼多多用户性别及年龄分布(数据来源-艾瑞数据)
+
+从图1可见，拼多多主要用户性别为女性。在年龄分布上，有52.73%的用户在30岁以下，78.99%的用户分布在35岁以下的区间，以上数据证明了目标用户及典型场景的预测是较为准确的。
+
+## 三、关键功能体验与描述
+
+---
+
+### (一)产品结构图
+
+![图片2](/img/post/pinduoduo/2.png)
+
+图2 拼多多产品结构图
+
+### 2.基本功能体验和描述
+
+**1.概述**
+
+拼多多给自己的定义是”社交+电商“模式的电商平台，因而在基本功能体验中，我们将围绕着”社交+电商“这一主题进行体验与描述。
+
+**2.功能体验与描述**
+
+**(1)搜索功能**
+
+1)功能入口：屏幕下方功能栏正中，点击后即在屏幕上方出现搜索栏。
+
+2)功能作用：便于目的明确的购买用户使用搜索进行购买行为。
+
+3)功能详细描述：
+
+①进入搜索页面以后，在搜索栏下方有着明确的产品分类，也便于目的稍微模糊的用户根据分类来确立自己的需求。
+
+②搜索分为两种：文字搜索和拍照识别搜索，点击搜索栏以后会出现三个栏目-最近搜索、更多搜索方式（搜索店铺、拍照搜同款）、搜索发现
+
+4)功能暴力测试：
+
+①文字搜索字数上限：在字符串字符超过999个中文汉字后，搜索无反馈，若有上一次搜索则会出现上一次搜索的搜索结果。
+
+②非法字符搜索：进行了颜文字及emoji字符的搜索，可以正常进行搜索，但搜索是否有结果需要对应商家是否提供颜文字和emoji文字标题。
+
+③拍照搜索测试：拍照搜索目前针对于无文字的商品匹配度较低，例如搜索熏香或电脑等商品，推荐结果与搜索商品不对应。
+
+**(2)购买功能**
+
+1)功能入口：进入具体商品详情页即在屏幕下方出现购买按键，区分为拼单购买和单独购买。
+
+2)功能作用：电商平台核心的功能，依靠平台链接商家和用户，使用户借助平台进行购买操作。
+
+3)功能流程：
+
+![图片3](/img/post/pinduoduo/3.png)
+
+4)功能详细描述：
+
+①针对于不同的购物人群，拼多多有着不同的入口。
+
+针对于购买目的明确的人群，拼多多提供搜索功能，使这一类人群可以快速定位到自己需求的商品；
+
+针对购买目的不明确的人群，拼多多提供了大量的推荐（功能栏中五个界面都拥有相应的推荐商品界面），与此同时，界面左上方会时不时弹出拼团消息（亮点功能），促进购买目的不明确的人群进行购买。
+
+②拼多多与传统的电商平台相比，它还是一个以拼团为核心卖点的电商平台，因而在购买商品时，拼多多提供了拼团的功能选项，依据商家设定的拼团人数，24小时内若能拼团成功则可按拼团价格进行购买。
+
+**(3)社交功能**
+
+1)功能入口
+
+2)功能作用：拼多多之所以定义自己是”社交+电商“的电商平台，一个重要的点就在于它的分享体系囊括范围较大，通过社交分享功能，使用户为平台做营销，从而增强信任感，达到引流目的。
+
+3)功能详细描述：
+
+①登陆界面中，拼多多鼓励使用微信号，QQ号，或手机号登陆，其中微信是拼多多主要鼓励的登陆方式，这有利于拼多多依靠微信达成它社交引流的目的。
+
+②在整个App的使用过程中，会在屏幕左上方一直弹出实时的拼单信息，在商品界面则为商品好评信息，有利于用户参与，形成社交环境。
+
+③拼多多的诸多活动功能都在促进用户进行分享，其本质都是通过分享行为，获取购买产品时的优惠。试分以下几类：拼单类，这是拼多多购买商品的主要逻辑，拼单主要依靠两种来源，第一种，已有拼单加入拼单，第二种，没有拼单创建拼单，两种方式拼多多都在鼓励将订单分享给更多的人，从而进行购买；游戏类(多多果园，多多爱消除，金猪赚大钱)，这一类的逻辑是通过游戏，给出任务，增加用户粘性的同时，使用户进行分享行为，从而获取折扣利益；红包提现类(天天领现金，拼单返现，砍价免费拿)，这一类逻辑是基于每天一次刷新，通过抽奖进度条这种行为，促进用户进行分享，从而进行返现。
+
+4)功能暴力测试：天天领现金等社交活动的分享，可以通过复制口令，重新进入App的方式进行，从而规避分享活动。
+
+### (三)亮点功能
+
+**1.无处不在的推荐系统**
+
+功能栏中五个界面都拥有相应的推荐商品界面
+
+**2.围绕”社交+电商“模式的App结构**
+
+从登入账号到核心用法，再到游戏活动，都在突出分享，使用户成为自己的营销力量的思路。
+
+**3.左上角实时播放的拼单消息和抢购消息**
+
+**4.商品评论中的“回头客”标签**
+
+**5.每一个界面中都有说明“本活动由中国人财险全程保障”，无形之中增加了用户的信任感。**
+
+## **四、竞品对比**
+
+![图片4](/img/post/pinduoduo/4.png)
+
+
+
+# 文章发布功能点对比-基于「简书」和「知乎」
+
+## 一、文章发布功能点概述
+
+### （一）简书的文章发布功能点
+
+![图片1](/img/post/zhihu/1.png)
+
+### （二）知乎的文章发布功能点
+
+![图片2](/img/post/zhihu/2.png)
+
+### （三）知乎与简书的文章发布功能点对比
+
+![图片3](/img/post/zhihu/3.png)
+
+## 二、文章发布功能设计原因
+
+### （一）简书的文章发布功能设计原因
+
+**1.产品定位**
+
+简书的slogan是“简书-创作你的创作”，其对于自己的定义是创作社区，任何人都可以在其平台上进行创作交流和分享。
+
+基于此，其核心实际上是：“创作”+“社交”，其创作的主要形式也是基于文字+图片，因此文章发布功能实际上是作为简书的一个核心功能存在的。
+
+因而在功能入口的设计上，简书拥有3个入口，方便用户随时随地能够进入自己的创作空间进行创作。
+
+在文章撰写方面，简书也主要侧重于图文撰写，如在图片支持上，支持一次性插入30副图片的功能点，分级标题功能也是作为一个支持结构化撰写的功能点需求所存在，文集的设置支持了用户长篇创作的需求等等。
+
+**2.用户-场景-需求**
+
+![图片](/img/post/zhihu/4.png)
+
+### （二）知乎的文章发布功能设计原因
+
+**1.产品定位**
+
+知乎的slogan是“有问题，上知乎”，其对于自己的定义是网络问答社区，通过用户进行知识、经验、见解的分享。
+
+基于此，其核心实际上是：“问答”+“社交”，针对于不同的问题，给出相应的作答，在这样的情况下，文章发布功能实际上是知乎平台的次要功能。
+
+知乎的文章发布入口与提问，回答，发视频，发想法等功能合并在同一个界面，发布入口较为集中。
+
+在文章撰写方面，知乎相较于简书，多支持了视频的模式，表现方式相对于图文来说更多元化，除此以外，知乎的@其他用户功能，增加了知乎文章撰写的互动性。
+
+**2.用户-场景-需求**
+
+![图片](/img/post/zhihu/5.png)
+
+## 三、带来的启发
+
+### （一）产品功能点要紧切产品定位与用户需求
+
+同样作为文章发布功能，在简书与知乎的对比下，却拥有者不同的定位和价值，这一切都是用户需求下的产品定位来决定的，一个功能点做或不做，以什么样的姿态呈现在用户的面前，都是基于产品定位与用户需求。
+
+### （二）功能点在基础功能以外可以适当的包含付费功能
+
+这一点启发主要来源于简书，简书的文章发布功能中，有一个功能项是发表付费文章，它需要简书钻大于300.001才能开启这项功能，那么简书钻是什么呢？根据官方的解释，它是一种特殊道具，你可以用它进行点赞，变现，享受等级权益，如何获取简书钻呢，可以通过简书贝，点赞热文，以及撰写优秀文章等方式，开通简书会员可以更高效的获取到简书钻。基于这样的设定，给了一个文章变现的机会，但在变现之前，又有了相应的门槛，形成了一个付费+优秀创作的良性循环。
+
+### （三）核心功能入口便捷化设置
+
+这一点启发是基于简书第一次发布文章后，给出的提示，ios系统有着相对闭合的生态环境，App的限制要求也十分严格，但简书将文章撰写的功能直接置于了ios系统的主屏幕上，让用户直接通过主屏幕就可以进入文章写作功能，是一个十分大的亮点。
+
+
+
+
+
+# 基于「达目标」的业务流程还原
 
 ## 一、业务流程还原
 
@@ -28,3 +234,246 @@ tags:
 ## 二、异常反馈梳理
 
 ![图片4](/img/post/damubiao/4.png)
+
+
+
+# 「今天你真好看」产品调研
+
+## 一、调研结论
+
+**1.注重男性用户的拉取与留存**
+
+从图5我们可知，“今天你真好看”的用户性别分布中，男性的比例仅占据5.16%，但依据唯品会大数据的报告，2016年至2017年男性美妆购买指数从16.7%上涨到了42.9%，与此同时，90后男生购买面膜和护肤套装的比例也在逐步上升，根据2018年艾瑞咨询的数据，18.8%的95后男生使用BB霜，18.6%使用唇膏/口红。这些数据说明男性市场拥有着巨大的潜力，因而“今天你真好看”在接下来的运营和规划中，可以对男性用户进行相应的运营活动进行拉取。
+
+**2.注重产品的宣传与推广**
+
+通过运营路径的分析，我们可知，“今天你真好看”的产品运营活动基本依赖于微博推送，以及博主的相应的知识科普，在宣传方面有着很大的欠缺，依赖百度，谷歌，酷传，IT桔子等搜送工具进行搜索，得到的有关“你今天真好看”的App的内容极少，并且还有另外一个同名品牌“你今天真好看”的检索信息，因而在产品的宣传与推广方面，“你今天真好看”存在十分严重的问题。
+
+
+**3.深挖医美定制与更新自己的产品库，形成一套完整的产品链条**
+
+医美定制是1.9.5（2019年7月）新上线的功能模块，该功能模块目前依附于定制，针对于测一测的结果提供相应的医美服务，并且针对于该项目的特点，适宜人群，效果及原理，项目分类，术前术后建议，效果展示和常见问题等进行分析，但最终使用这个功能并不能通过App来进行直接操作，而需要进行微信号的添加，通过官方微信号联系医美产业。建议后续将这个功能公开化和流程化，在App中就能直接进行操作。
+
+## 二、文章结构
+
+![图片](/img/post/prd/1.png)
+
+## 三、体验环境
+
+![图片](/img/post/prd/2.png)
+
+## 四、产品介绍
+
+### （一）产品概况
+
+**产品是什么：“**你今天真好看”是一款基于人工智能分析技术，基于肌龄、肤色、出油、痘痘、黑头等维度进行用户肤质判断，从而进行护肤建议及推荐相应护肤品的护肤美妆App。
+
+**产品满足的需求点：**作为一款护品美妆类App，“你今天真好看”满足了用户的两个核心需求“不知道自己属于何种肤质”和"知道自己肤质但难以选择适合的护肤和美妆品"。
+
+### （二）产品核心功能点
+
+**1.概述**
+
+“今天你真好看”的核心功能点以三部分组成，即：测一测、定制和聊，其产品的逻辑是通过测一测进行肤质的分析观察，基于现有肤质，通过定制进行皮肤护理产品的推荐，聊功能点是作为前两个功能点的补充，通过社区环境进行用户留存。
+
+**2.测一测**
+
+该功能通过手机后置摄像头获取面部信息，通过AI技术进行解析，从总结（肤龄、健康度、细腻度、干油性、匀净度、年轻度等维度进行测评），出油情况，肤色，光滑度，耐受/敏感性几个维度进行测评，同时给出问题（概况、眼部问题、毛孔等维度）。
+
+**3.定制**
+
+该功能基于测一测和账号登录功能，在进行皮肤检测后，可用按需定制功能（美白，抗衰老，祛痘，润肤，敏感肌保护），按类选择功能（从洁面到卸妆一整个流程）和医美定制功能（美白祛斑，去黑头，眼部问题等）。
+
+**4.聊**
+
+该功能是该App的社区环节，其下有热门话题、同肤质在聊、新话题、今天聊什么等模块，支持用户进行产品的讨论，以及对各类产品的推广安利。
+
+## 五、调研背景及目的
+
+### （一）行业背景
+
+2013-2017年，中国网购用户数量持续增长，网购在网民中的使用率逐渐上升，而19岁到30岁之间的用户成为当前电商平台最大的使用年龄段，约有45.7%，在这一区间内，绝大多数都是90后。（见图1）
+
+![图片](/img/post/prd/3.png)
+
+图1 2013-2017年中国网络购物用户规模发展情况及2018年2月中国电子商务应用用户年龄结构图（数据来源：CNNIC第42次《中国互联网发展状况统计报告》）
+
+根据2019年1月艾瑞90后调研，我们可知，逾六成的90后每天都浏览时尚资讯，拥有着高频的浏览行为，较80后相比TGI高达122（见图2）。注：TGI=90后占比/80后占比
+
+![图片](/img/post/prd/4.png)
+
+图2 2018年90后浏览时尚资讯频率和时长（数据来源：2019年1月艾瑞90后调研）
+
+而在时尚领域，对于护肤和美妆的需求占比一直名列前茅，护肤心得占52%，排名第二，美妆教程占48%，排名第四。（见图3）
+
+![图片](/img/post/prd/5.png)
+
+图3 2018年90后关注时尚资讯内容（2019年1月艾瑞90后调研）
+
+根据2017年唯品会大数据发布的数据来看，90后的销量占比近4成（见图4）
+
+![图片](/img/post/prd/6.png)
+
+图4 2017年唯品会各年龄美妆销量指数及占比图（数据来源：唯品会大数据）
+
+基于以上数据，我们可以得知，护肤美妆需求已经是现在消费市场中的重要一环，其拥有着巨大的市场潜力，同时，这一部分用户对于时尚资讯更重视于内容质量高与切合自身需求，因此，本次调研我们围绕着满足用户客观需求的测肤美妆推荐App——你今天真好看。
+
+### （二）行业产品情况
+
+![图片](/img/post/prd/7.png)
+
+图5 2019年11月丽人丽容月独立活跃设备数数据（数据来源：艾瑞咨询）
+
+基于图5，我们可以看出整个护肤美妆行业有着大量的独立设备活跃，即拥有大量用户活跃，其中，我们本次要调研的产品“你今天真好看App”排在该行业第6位，月活约有12万左右，是一个相对较高的活跃数。
+
+### （三）调研目的
+
+通过对“你今天真好看”产品的调研，分析其主要核心功能点，了解其是如何进行整个产品的闭环设计，对其功能体验提出建议。
+
+## 六、用户场景需求
+
+### （一）宏观用户分析
+
+**1.性别分布**
+
+![图片](/img/post/prd/8.png)
+
+图6 “你今天真好看”用户性别分布图（数据来源：艾瑞咨询）
+
+**2.年龄分布**
+
+![图片]![图片](/img/post/prd/9.png)
+
+图7 “你今天真好看”用户年龄分布图（数据来源：艾瑞咨询）
+
+**3.地域分布**
+
+![图片](/img/post/prd/10.png)
+
+图8 “你今天真好看”用户地域分布图（数据来源：艾瑞咨询）
+
+**4.总结**
+
+基于对“你今天真好看”的用户分析，我们可以看出，该App的用户多为女性，且年龄段多分布在35岁以下，东部地区使用人数较多，西部地区以四川为主要使用区域。
+
+### （二）用户场景需求
+
+案例1：初步接触护肤与美妆，对自身情况还没有了解也没有经验的护肤彩妆用户。
+
+典型使用场景：小张刚刚升入大学，近期她发现自己身边的女孩子都开始注重护肤和化妆，可是这在她之前的生活中是很少接触的，她也不清楚自己属于什么肤质，自己的皮肤有着哪些小问题，有一天朋友向小张推荐了“你今天真好看”，小张下载后，使用测一测功能了解了自己的肤质，并根据定制开始使用适合自己的护肤与美妆品。
+
+案例2：已经接触了一段时间的护肤与美妆领域，对自身情况有所了解但是想尝试其他产品的用户。
+
+典型使用场景：小李刚刚步入职场，在开始自己赚钱以后，小李准备升级换代自己的护肤和美妆品，但琳琅满目呈现于她面前的产品使她无从下手选择，面对试错成本很高的情况，她最终找到了“你今天真好看”App，通过了定制知道了不同价位适合自己的护肤品与美妆品，并且通过其他用户的评价和博主的推荐，最终选到了几款比较适合自己的产品。
+
+案例3：对护肤和美妆领域很有心得，需要一个平台来发布自己的经验与知识，帮助他人。
+
+典型使用场景：小周是一个美妆达人，他经常在各种平台上发布自己的美妆使用体验帮助别人进行美妆产品的使用，从而赚取人气，实现流量变现，“你今天真好看”的社交环境也吸引了小周进行入驻分享。
+
+综上所述，可归纳出如下表格：
+
+![图片](/img/post/prd/11.png)
+
+## 七、产品逻辑与结构
+
+### （一）核心业务逻辑
+
+![图片](/img/post/prd/12.png)
+
+图9 “你今天真好看”核心业务逻辑图
+
+你今天真好看的业务中主要有三方用户：用户，运营团队和医美产品
+
+用户：用户又分为三类，第一类普通用户，只使用你“今天真好看”的测一测和定制功能进行产品的选购和消费，同时可能还会看一些相关的交流推文；第二类是热衷于交流的有经验用户，这一类用户会热衷于在交流区交流自己的心得体会；第三类用户是护肤大V，这一类大V通过推文的形式吸引粉丝，推动其关注自己的公众号，从而实现知识共享或知识变现。
+
+医美产品：通过宣传费使自己的产品上线在“你今天真好看”的推荐中，从而赢取用户进行使用。
+
+运营团队：通过自己的AI算法为用户精准匹配美妆产品，吸引用户使用，为医美产品提供宣传，获取广告费用。
+
+### （二）业务逻辑
+
+![图片](/img/post/prd/13.png)
+
+图10“你今天真好看”的业务逻辑图
+
+你今天真好看的用户使用流程分为三个阶段：测一测，定制，实际使用
+
+测一测：通过自研的AI算法，对肤质进行测算，从多个维度进行分析拆解；
+
+定制：通过对肤质的测算解析，针对于不同维度使用不同的推荐算法，推荐适合的产品；
+
+实际使用：实际使用后若有效果，则进行复测复评，从而实现复购行为。
+
+### （三）产品功能结构
+
+![图片](/img/post/prd/14.png)
+
+图11 “你今天真好看”的产品功能结构图
+
+## 八、产品交互体验
+
+![图片](/img/post/prd/15.png)
+
+图12 “你今天真好看”的产品交互体验图
+
+综合前言，我们可知，“今天你真好看”的关键功能就在于“测一测”,“定制”和“聊”上，因而，在产品交互体验这一环节，我们将以上三个功能的页面交互进行截取。
+
+在测一测环节上，测一测的交互体验非常流畅，并且有着优秀的初次使用用户向导，同时人声拍照提示和自动拍照是作为后置摄像头拍摄的一个很大的补充。在测试结束后进行的汇报维度较为详尽，并且标注了每一个维度的划分标准，与此同时指出了问题，并提供了相应的参考建议。
+
+在定制环节，提供了多种定制分类条件，如从用户需求出发的按需定制，以及按需要购买产品种类划分的按类定制，以及下属的各种医美选项，可选择性强。
+
+而聊界面，界面划分简单明了，能够直接获取到用户发布内容，进行互动。
+
+## 九、产品的迭代与运营路径
+
+![图片](/img/post/prd/16.png)
+
+图13 “你今天真好看”的产品迭代和运营路径
+
+### （一）产品迭代分析
+
+根据如上产品迭代的图示，可以将产品迭代划分为三个阶段：
+
+第一阶段：1.0-1.3版本，在这一版本阶段期间，主要对产品的基本功能，如肤色算法，测一测的使用流程和使用体验进行迭代优化，同时修复各种闪退的bug。
+
+第二阶段：1.3-1.6版本，在这一版本阶段期间，主要针对于产品的社交功能进行建立和优化，从而建立起社区环境，在基础的测+定制功能外新加入讨论和话题等功能，增强用户粘性。
+
+第三阶段：1.6-2.0版本，在这一版本阶段期间，核心功能已经确定，在不断增加自身App产品库数量的同时对已有功能进行更贴合用户使用体验的优化，除此以外，还进行了诸如医美定制，品牌库等新功能的开发。
+
+### （二）运营路径分析
+
+从运营路径上来看，“你今天真好看App”使用的是线上运营的方式，其对于产品的推广和宣传基本依托于线上微博，微信等方式，通过打造各种博主专栏，传播知识，从而吸引关注度。
+
+基于产品迭代的过程，“你今天真好看App”的运营路径是与产品迭代相结合的，2016年8月发布了1.0版本，在进行了两个月的版本BUG修复和产品使用体验改善后，2016年10月官方建立了微博，进行运营活动，2017年3月建立了微信公众号进行微信平台的运营，到目前为止（2019年12月1日）共有52篇原创内容。但相应的运营渠道建立起来以后，运营活动的效果并不尽如人意，如最近一篇微信公众推文阅读量仅有538次，而作为主要宣传渠道的微博“好看喵”也仅有15万人次，最近一次发送微博是在7月21日，仅有10个评论，10次点赞，5个转发。
+
+基于以上数据，“你今天真好看App”在运营方面存在着很大的问题，在产品日渐迭代的同时，相应的运用活动并没有跟上。
+
+## 十、产品数据表现
+
+### （一）增长曲线
+
+![图片](/img/post/prd/17.png)
+
+图14 “你今天真好看”的2018年11月至2019年10月月度独立设备数曲线图
+
+数据显示，“你今天真好看”一直保证着稳定增长，月度增长均保持在10万台以上，其中尤以2019年2月增长最多。经过对官方微博“好看喵”及官方微信公众号“你今天真好看app”的内容检索，2019年2月的增长率与该App与小红书的联合运营活动有关，与此同时，此时的人数上涨也得益于春节所带来节假日人口福利。
+
+### （二）产品自身使用数据
+
+![图片](/img/post/prd/18.png)
+
+图15 “你今天真好看”的测肤人数统计图
+
+图15为你今天真好看的官网测肤人数统计，该人数统计实时更新，但基于“你今天真好看”的下载次数和用户总量，该数据指标应该是基于次数而非人数进行统计的。
+
+
+![图片](/img/post/prd/19.png)
+
+图16 “你今天真好看”的产品自身使用数据样图
+
+图16为“你今天真好看”App的几个主要用户数据统计界面，可以看出，用户的评论量和评价量是比较符合其下载量和使用量的。
+
+而评论量和评分量的增多无疑会给用户带来相应的信任度和参考度，进入到了详细产品的界面，评论量相对来说也较多，基于评分->评价的转化流，使用户深入后，能够有一个相应的粘性来进行用户留存。
+
+
+
