--- a/_posts/2020-1-12-Psy-1.md
+++ b/_posts/2020-1-12-Psy-1.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      "西方哲学史"
-subtitle:   "古希腊通史概述"
+title:      "西方哲学史-1"
+subtitle:   "第一篇-古希腊通史概述"
 date:       2020-1-12 20:00:00
 author:     "弦望晦朔"
 header-img: "img/post/post-bg-psy-1.jpg"
@@ -71,7 +71,7 @@ Classics一词出自于拉丁文的classicus，原意是指罗马五个公民等
 
 克里特岛上的米诺斯文明，其存在时间是公元前2000年-前1400年，关于米诺斯文明的起源，学术界至今仍然争论不休，问题主要集中于米诺斯人的由来，以及其文明毁灭的原因，在起源方面，有一推断是米诺斯人可能是埃及的移民，这是基于文明发展的进程和地理因素来进行推断的。
 
-![img1](/img/post/psy/1.png)
+![img1](/img/post/psy/1.jpg)
 
 图1 2000BCE的地中海东部地图
 
@@ -81,7 +81,7 @@ Classics一词出自于拉丁文的classicus，原意是指罗马五个公民等
 
 尽管希腊史的研究在政治领域上极度想要划清希腊与迈锡尼文化的关系，但在神系和宗教研究上，迈锡尼文明与希腊文明有着千丝万缕的关系，因为在此阶段神的谱系已初步具备，波塞冬，宙斯赫拉，阿瑞斯等申领在此时均已出现，迈锡尼文明先后遭到爱奥尼亚人（Ionians），亚该亚人（阿开奥斯人，Achaians）[[5\]](#_ftn5)，多里安人（Dorians）的入侵，基于这种入侵，使得宗教混合了，印欧系宗教[[6\]](#_ftn6)与迈锡尼宗教[[7\]](#_ftn7)相混合，最终构成了古典时代的希腊的宗教。
 
-![img2](/img/post/psy/2.png)
+![img2](/img/post/psy/2.jpg)
 
 图2 公元前1000年阿尔戈斯地区族群分布
 
